--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -15,7 +15,8 @@
     "nuxt": "^2.17.1",
     "sockjs-client": "^1.4.0",
     "webstomp-client": "^1.2.6",
-    "marked": "4.0.10"
+    "marked": "4.0.10",
+    "ansi-regex": "6.0.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.3.1",
