--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,11 +12,10 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
-    "nuxt": "^2.17.1",
+    "nuxt": "3.8.0",
     "sockjs-client": "^1.4.0",
     "webstomp-client": "^1.2.6",
-    "marked": "4.0.10",
-    "ansi-regex": "6.0.1"
+    "marked": "4.0.10"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.3.1",
