--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
+    "semver": "7.5.2",
     "nuxt": "3.8.0",
     "sockjs-client": "^1.4.0",
+    "eventsource": "2.0.2",
     "webstomp-client": "^1.2.6",
-    "marked": "4.0.10"
+    "marked": "4.0.10",
+    "unset-value": "2.0.1",
+    "glob-parent": "5.1.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.3.1",
