--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,7 +19,9 @@
     "webstomp-client": "^1.2.6",
     "marked": "4.0.10",
     "unset-value": "2.0.1",
-    "glob-parent": "5.1.2"
+    "glob-parent": "5.1.2",
+    "decode-uri-component": "0.2.2",
+    "unset-value": "2.0.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.3.1",
