--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,16 +12,15 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
-    "semver": "5.7.2",
-    "nuxt": "3.8.0",
-    "sockjs-client": "^1.4.0",
-    "eventsource": "1.1.1",
-    "webstomp-client": "^1.2.6",
-    "marked": "4.0.10",
-    "unset-value": "2.0.1",
-    "glob-parent": "5.1.2",
     "decode-uri-component": "0.4.1",
-    "unset-value": "2.0.1"
+    "eventsource": "1.1.1",
+    "glob-parent": "5.1.2",
+    "marked": "4.0.10",
+    "nuxt": "3.8.0",
+    "semver": "5.7.2",
+    "sockjs-client": "^1.4.0",
+    "unset-value": "2.0.1",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.3.1",
